플레이어 기능 추가 구현
플레이어 정보를 json 파일로 세이브 및 로드하게 기능 추가. (아직 플레이어의 위치와 인벤토리의 아이템들은 직렬화시키지 않았음.)

HP, MP 바 구현 및 이벤트 처리

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -202,17 +202,20 @@
     <Compile Include="Assets\Scripts\Player\Behavior\PlayerGroundAttack3.cs" />
     <Compile Include="Assets\Scripts\Player\CharacterCam.cs" />
     <Compile Include="Assets\Scripts\Player\CharacterControl.cs" />
+    <Compile Include="Assets\Scripts\Player\LevelInfo.cs" />
+    <Compile Include="Assets\Scripts\Player\Player.cs" />
+    <Compile Include="Assets\Scripts\Player\PlayerInfo.cs" />
     <Compile Include="Assets\Scripts\Portal.cs" />
     <Compile Include="Assets\Scripts\Singleton\AudioManager.cs" />
     <Compile Include="Assets\Scripts\Singleton\GameManager.cs" />
     <Compile Include="Assets\Scripts\Singleton\MusicManager.cs" />
-    <Compile Include="Assets\Scripts\Singleton\Player.cs" />
     <Compile Include="Assets\Scripts\Singleton\TimeManager.cs" />
     <Compile Include="Assets\Scripts\UI\EquipmentSystem.cs" />
     <Compile Include="Assets\Scripts\UI\Hotbar.cs" />
     <Compile Include="Assets\Scripts\UI\InventorySystem.cs" />
     <Compile Include="Assets\Scripts\UI\ItemSlot.cs" />
     <Compile Include="Assets\Scripts\UI\Menu.cs" />
+    <Compile Include="Assets\Scripts\UI\PlayerInfoSystem.cs" />
     <Compile Include="Assets\Scripts\UI\TitleMenu.cs" />
     <Compile Include="Assets\Scripts\UI\Tooltip.cs" />
     <Compile Include="Assets\Scripts\UI\UI - Panel\ICheckPanel.cs" />
