--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -8,8 +8,7 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
-    <RootNamespace>
-    </RootNamespace>
+    <RootNamespace></RootNamespace>
     <ProjectGuid>{189E3DE7-AFD6-FCE6-40B0-6FA3E4F27E72}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -209,7 +208,6 @@
     <Compile Include="Assets\Particlecollection_Free samples\Plugins\Effect\Script\EffectShaderPropertyStr.cs" />
     <Compile Include="Assets\Particlecollection_Free samples\Plugins\Effect\Script\RenderEffect.cs" />
     <Compile Include="Assets\Particlecollection_Free samples\Plugins\Effect\Script\TransformExtension.cs" />
-    <Compile Include="Assets\Scripts\Player\Behavior\PlayerDamaged.cs" />
     <Compile Include="Assets\RichTextPlugin\Examples\AnimableRichText.cs" />
     <Compile Include="Assets\RichTextPlugin\Examples\RichTextExampleGUI.cs" />
     <Compile Include="Assets\RichTextPlugin\Examples\RicxhTextExampleConsole.cs" />
@@ -248,6 +246,7 @@
     <Compile Include="Assets\Scripts\Monster\MonsterState.cs" />
     <Compile Include="Assets\Scripts\Monster\MonsterType.cs" />
     <Compile Include="Assets\Scripts\Player\Behavior\PlayerAirAttack.cs" />
+    <Compile Include="Assets\Scripts\Player\Behavior\PlayerDamaged.cs" />
     <Compile Include="Assets\Scripts\Player\Behavior\PlayerGroundAttack1.cs" />
     <Compile Include="Assets\Scripts\Player\Behavior\PlayerGroundAttack2.cs" />
     <Compile Include="Assets\Scripts\Player\Behavior\PlayerGroundAttack3.cs" />
